--- a/src/Page.css
+++ b/src/Page.css
@@ -47,7 +47,7 @@
   margin-left: 10%;
   margin-right: 10%;
   flex-grow: 1;
-  background-color: rgba(255, 255, 255, 1)*/; /* Use RGBA for semi-transparent background */
+  background-color: rgba(255, 255, 255, 1); /* Use RGBA for semi-transparent background */
   z-index: 1;
   overflow: hidden; /* Hide any content that exceeds the container */
 }
